--- a/Assets/Assembly-CSharp.csproj
+++ b/Assets/Assembly-CSharp.csproj
@@ -45,6 +45,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Alt\GameManager.cs" />
+     <Compile Include="Assets\Scripts\Alt\Tile.cs" />
      <Compile Include="Assets\Scripts\GameBoard.cs" />
      <Compile Include="Assets\Scripts\GameController.cs" />
  <Reference Include="UnityEngine.UI">
