--- a/Assets/Assembly-CSharp.csproj
+++ b/Assets/Assembly-CSharp.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Scripts\Alt\ActionCard.cs" />
      <Compile Include="Assets\Scripts\Alt\Card.cs" />
      <Compile Include="Assets\Scripts\Alt\GameManager.cs" />
+     <Compile Include="Assets\Scripts\Alt\Network\NetworkManager.cs" />
      <Compile Include="Assets\Scripts\Alt\Player.cs" />
      <Compile Include="Assets\Scripts\Alt\Tile.cs" />
      <Compile Include="Assets\Scripts\Alt\User.cs" />
